--- a/nginx/vhost.conf
+++ b/nginx/vhost.conf
@@ -2,6 +2,13 @@ server {
         listen       80;
 
         server_name   machine;
+        return        301 https://$server_name$request_uri;
+}
+
+server {
+        listen       443;
+
+        server_name   machine;
         #access_log   /var/log/nginx/symfony-access.log;
         #error_log    /var/log/nginx/symfony-error.log;
 
@@ -11,6 +18,10 @@ server {
 
         root /var/www/web/;
         index app_dev.php;
+
+        ssl on;
+        ssl_certificate /var/www/certs/server.crt;
+        ssl_certificate_key /var/www/certs/server.key;
 
         location / {
                 try_files $uri $uri/ /app_dev.php?$query_string;
