--- a/symfony/Dockerfile
+++ b/symfony/Dockerfile
@@ -8,6 +8,7 @@ RUN apt-get update && apt-get install -y \
     php5-cli \
     php5-json \
     php5-curl \
+    php5-mongo \
     php5-intl
 
 RUN curl -sS https://getcomposer.org/installer | php
